# meok-watermark-attest-mcp

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  acp.json  glama.json  llms.txt  pyproject.toml  sbom.cdx.json  server.json  server.py  smithery.yaml
.github/workflows/: mcp-registry-publish.yml  scorecard.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
