[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meok-watermark-attest-mcp"
version = "1.3.12"
description = "EU AI Act Article 50 watermarking + transparency compliance MCP. Built for the 2 August 2026 cliff. Article 50 transparency obligations apply from 2 Aug 2026; pre-existing systems have until 2 Dec 2026. Classify Art 50 obligations (chatbot disclosure, GPAI synthetic-content marking per C2PA-2.0, deepfake disclosure, emotion/biometric transparency), generate compliant disclosure text, audit content pipelines, emit HMAC-signed attestations. By MEOK AI Labs."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "eu-ai-act", "article-50", "watermarking", "deepfake-disclosure", "synthetic-content", "c2pa", "synthid", "transparency", "chatbot-disclosure", "compliance", "signed-attestation", "meok-ai-labs"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Multimedia"]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://csoai.org"
Repository = "https://github.com/CSOAI-ORG/meok-watermark-attest-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
meok-watermark-attest-mcp = "server:main"
