[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meok-watermark-attest-mcp"
version = "1.3.8"
description = "EU AI Act Article 50 watermarking + transparency compliance MCP. Built for the 2 November 2026 cliff (the new nearest EU AI Act deadline after the Digital Omnibus pushed high-risk to Dec 2027). Classify which Art 50 obligations apply (chatbot disclosure, GPAI synthetic-content marking per C2PA-2.0, deepfake disclosure, emotion/biometric transparency), generate compliant disclosure text per surface + language, audit content pipelines, emit HMAC-signed compliance attestations. By MEOK AI Labs."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "eu-ai-act", "article-50", "watermarking", "deepfake-disclosure", "synthetic-content", "c2pa", "synthid", "transparency", "chatbot-disclosure", "compliance", "signed-attestation", "meok-ai-labs"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Multimedia"]
dependencies = ["mcp>=1.28.0"]

[project.urls]
Homepage = "https://csoai.org"
Repository = "https://github.com/CSOAI-ORG/meok-watermark-attest-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
meok-watermark-attest-mcp = "server:main"
